--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,9 +67,9 @@
                 <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
-                       aria-expanded="false">SELECT<span class="caret"></span></a>
+                       aria-expanded="false">食堂应用<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">PART 1</a></li>
+                        <li><a id="order" href="#">用餐预定</a></li>
                         <li><a href="#">PART 2</a></li>
                         <li><a href="#">PART 3</a></li>
                     </ul>
@@ -123,19 +123,25 @@
 <script>
     $(function () {
         var data = window.sessionStorage.getItem('name');
-        if (data !=""){
+        if (data != null) {
             $('#userNav').html('<li class="dropdown">\n' +
                 ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
-                ' aria-expanded="false" >'+data+'<span class="caret"></span></a>\n' +
+                ' aria-expanded="false" >' + data + '<span class="caret"></span></a>\n' +
                 ' <ul class="dropdown-menu">\n' +
-                ' <li><a href="/user/getPerson.do?name='+data+'">个人信息</a></li>\n' +
-                ' <li><a href="/user/editPerson.do?name='+data+'">修改个人信息</a></li>\n' +
-                ' <li><a href="/user/editPassword.do?name='+data+'">修改密码</a></li>\n' +
+                ' <li><a href="/user/getPerson.do?name=' + data + '">个人信息</a></li>\n' +
+                ' <li><a href="/user/editPerson.do?name=' + data + '">修改个人信息</a></li>\n' +
+                ' <li><a href="/user/editPassword.do?name=' + data + '">修改密码</a></li>\n' +
                 ' </ul>\n' +
                 ' </li>' +
                 '<li><a href="#" onclick="logout()">log out</a></li>')
         }
-    })
+
+        $('#order').on('click',function () {
+
+            window.location.href = "/canteen/orderPage?uid=" + window.sessionStorage.getItem('uid') + "";
+        })
+
+    });
 
     function logout() {
         window.sessionStorage.removeItem('name');
