--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -70,8 +70,8 @@
                        aria-expanded="false">食堂应用<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a id="order" href="#">用餐预定</a></li>
-                        <li><a href="#">PART 2</a></li>
-                        <li><a href="#">PART 3</a></li>
+                        <li><a id="userOrders" href="#">订餐详情</a></li>
+                        <li><a href="#">订餐记录</a></li>
                     </ul>
                 </li>
             </ul>
@@ -137,8 +137,11 @@
         }
 
         $('#order').on('click',function () {
-
             window.location.href = "/canteen/orderPage?uid=" + window.sessionStorage.getItem('uid') + "";
+        });
+
+        $('#userOrders').on('click',function () {
+            window.location.href = "/canteen/userOrders?uid=" + window.sessionStorage.getItem('uid') + "";
         })
 
     });
