--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -63,9 +63,9 @@
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
                        aria-expanded="false">SELECT<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">PART 1</a></li>
-                        <li><a href="#">PART 2</a></li>
-                        <li><a href="#">PART 3</a></li>
+                        <li><a id="order" href="#">用餐预定</a></li>
+                        <li><a href="#">订餐详情</a></li>
+                        <li><a href="#">订餐记录</a></li>
                     </ul>
                 </li>
             </ul>
@@ -114,6 +114,11 @@
                 ' </li>' +
                 '<li><a href="#" onclick="logout()">log out</a></li>')
         }
+
+        $('#order').on('click',function () {
+
+            window.location.href = "/canteen/orderPage?uid=" + window.sessionStorage.getItem('uid') + "";
+        })
     })
 
     function logout() {
