--- a/src/main/resources/templates/COrderList.html
+++ b/src/main/resources/templates/COrderList.html
@@ -7,6 +7,7 @@
     <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-table.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-switch.css}">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-table.css">
     <style>
         .myfooter {
@@ -31,6 +32,8 @@
 <script  th:src="@{/js/bootstrap.min.js}"></script>
 <script th:src="@{/js/bootstrap-table.min.js}"></script>
 <script  th:src="@{/js/bootstrap-table-zh-CN.min.js}"></script>
+<script  th:src="@{/js/bootstrap-switch.min.js}"></script>
+
 <script src="/static/js/bootstrap-table.min.js"></script>
 <script src="/static/js/bootstrap-table-zh-CN.min.js"></script>
 <!--<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>-->
@@ -86,11 +89,107 @@
 
 <main style="width: 960px;margin: 0 auto">
     <div class="container" style="width: inherit">
+        <div class="page-header col-md-12 col-sm-12 col-xs-12">
+            <h1>订餐详情 <small>order Infomation</small></h1>
+        </div>
+        <div id="msgDiv"class="col-md-12 col-sm-12 col-xs-12" style="height: auto">
+
+        </div>
         <input id="uid" type="hidden" th:value="${user.uid}">
         <table id="table"></table>
     </div>
+
+    <div id="toolbar" class="btn-group">
+
+        <button id="btn_delete" type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+        </button>
+    </div>
 </main>
 
+<div class="modal fade" tabindex="-1" role="dialog" id="confirm">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">提示</h4>
+            </div>
+            <div class="modal-body">
+                <p>确认要删除所选订餐信息吗？</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-danger" onclick="deleteOrder()">删除</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<div class="modal fade" tabindex="-1" role="dialog" id="edit">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">提示</h4>
+            </div>
+
+            <div class="modal-body">
+                <div class="row">
+                    <form class="form-horizontal" id="editForm">
+                        <div class="form-group disabled col-md-12">
+                            <label class="col-md-2">UID</label>
+                            <div class="col-md-10">
+                                <input id="editUid" name="uid" class="form-control" th:value="${user.uid}" disabled></input>
+                            </div>
+                        </div>
+                        <div class="form-group disabled col-md-12">
+                            <label class="col-md-2">用户</label>
+                            <div class="col-md-10">
+                                <input id="username" name="username" class="form-control" th:value="${user.username}" disabled></input>
+                            </div>
+                        </div>
+
+                        <div class="form-group disabled col-md-12">
+                            <label class="col-md-2">早餐</label>
+                            <div class="col-md-4">
+                                <input id="breakfast" name="breakfast" class="orderSwitch switch-small" type="checkbox"  value="1" />
+                            </div>
+                            <label class="col-md-1">份数</label>
+                            <div class="col-md-5">
+                                <input name="bfMany" id="bfMany" type="text" class="form-control"  th:value="${1}">
+                            </div>
+                        </div>
+                        <div class="form-group disabled col-md-12">
+                            <label class="col-md-2">午餐</label>
+                            <div class="col-md-4">
+                                <input id="lunch" name="lunch" class="orderSwitch switch-small" type="checkbox" value="1"/>
+                            </div>
+                            <label class="col-md-1">份数</label>
+                            <div class="col-md-5">
+                                <input name="lMany" id="lMany" type="text" class="form-control"  th:value="${1}">
+                            </div>
+                        </div>
+                        <div class="form-group disabled col-md-12">
+                            <label class="col-md-2">晚餐</label>
+                            <div class="col-md-4">
+                                <input id="dinner" name="dinner" class="orderSwitch" type="checkbox" value="1"/>
+                            </div>
+                            <label class="col-md-1">份数</label>
+                            <div class="col-md-5">
+                                <input name="dMany" id="dMany" type="text" class="form-control" th:value="${1}">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" onclick="editOrder()">修改</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 <footer class="myfooter" style="height: 150px">
     <div class="container" style="text-align: left">
@@ -108,6 +207,7 @@
 </body>
 <script>
     var uid = $('#uid').val();
+    var delete_COID = {};
 
     $('#table').bootstrapTable({
         url: '/canteen/getUserOrders.do',         //请求后台的URL（*）
@@ -141,7 +241,7 @@
         showRefresh: true,                  //是否显示刷新按钮
         minimumCountColumns: 2,             //最少允许的列数
         clickToSelect: true,                //是否启用点击选中行
-        height: 500,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+        height: 1000,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
         uniqueId: "ID",                     //每一行的唯一标识，一般为主键列
         showToggle:true,                    //是否显示详细视图和列表视图的切换按钮
         cardView: false,                    //是否显示详细视图
@@ -168,6 +268,7 @@
                     if (row.breakfast === 0){
                         return value = '<span> 未订 </span>'
                     }else {
+                        $('#breakfast').prop('checked','checked');
                         return value = '<span> 已定 </span>'
                     }
                 }
@@ -181,6 +282,7 @@
                     if (row.lunch === 0){
                         return value = '<span> 未订 </span>'
                     }else {
+                        $('#lunch').prop('checked','checked');
                         return value = '<span> 已定 </span>'
                     }
                 }
@@ -194,6 +296,7 @@
                     if (row.dinner === 0){
                         return value = '<span> 未订 </span>'
                     }else {
+                        $('#dinner').prop('checked','checked');
                         return value = '<span> 已定 </span>'
                     }
                 }
@@ -212,9 +315,17 @@
                 formatter:function (value,row,index) {
                     return dateFmt_yyMMdd_hhmmss(value);
                 }
-            },
+            }, {
+                field: '',
+                title: '操作',
+                formatter:function (value,row,index) {
+                    return '        <button id="btn_edit" type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#edit" data-whatever="'+row.coid+'">\n' +
+                        '           <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改\n' +
+                        '        </button>';
+                }
+            }
         ]
-    })
+    });
 
 
     $(function () {
@@ -236,7 +347,70 @@
 
             window.location.href = "/canteen/orderPage?uid=" + window.sessionStorage.getItem('uid') + "";
         })
-    })
+
+        $('.orderSwitch').bootstrapSwitch({
+            size:'small',
+            onText: '订餐',
+            offText: '不订'
+        });
+
+        $('#edit').on('show.bs.modal',function (event) {
+            var button = $(event.relatedTarget) ;
+            var recipient = button.data('whatever');
+
+            var modal = $(this);
+            modal.find('.modal-title').text('订餐编号 COID： ' + recipient)
+        })
+    });
+
+    function editOrder() {
+
+    }
+
+    function deleteOrder() {
+        var rows = $('#table').bootstrapTable('getSelections');
+        var data = JSON.stringify(rows);
+        $.ajax({
+            url: '/canteen/deleteOrder.do',
+            type: 'POST',
+            dataType: 'JSON',
+            contentType: "application/json;charset=utf-8",
+            data:data,
+            success:function (data) {
+                var fail = data.fail;
+                if (data.statusCode == 200){
+                    $('#confirm').modal('hide');
+                    var info = '';
+                    if (fail.length === 0){
+                        info = '<div class="alert alert-success " role="alert">' +
+                            ' <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
+                            ''+data.msg+'</div>';
+                    }else {
+                        info = '<div class="alert alert-success " role="alert">' +
+                            ' <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
+                            ''+data.msg+'以下COID的记录删除失败：'+fail+'</div>';
+                    }
+
+                    $('#msgDiv').append(info);
+                    $('#table').bootstrapTable('refresh');
+                }else {
+                    $('#confirm').modal('hide');
+                    var info = '<div class="alert alert-danger " role="alert">' +
+                        ' <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
+                        ''+data.msg+'失败日期：'+failDate+'</div>';
+                    $('#msgDiv').append(info);
+                }
+            }
+        })
+    }
+
+    function convertToJson(str) {
+        var obj ={"uid":$('#editUid').val(),"name":$('#username').val()};
+        for (var i in str){
+            obj[str[i].name]=str[i]['value'];
+        }
+        return obj;
+    }
 
     function logout() {
         window.sessionStorage.removeItem('name');
