--- a/src/main/resources/templates/COrderList.html
+++ b/src/main/resources/templates/COrderList.html
@@ -140,6 +140,7 @@
                             <label class="col-md-2">UID</label>
                             <div class="col-md-10">
                                 <input id="editUid" name="uid" class="form-control" th:value="${user.uid}" disabled></input>
+                                <input id="editOtime" type="hidden" name="oTime" class="form-control"></input>
                             </div>
                         </div>
                         <div class="form-group disabled col-md-12">
@@ -152,7 +153,9 @@
                         <div class="form-group disabled col-md-12">
                             <label class="col-md-2">早餐</label>
                             <div class="col-md-4">
-                                <input id="breakfast" name="breakfast" class="orderSwitch switch-small" type="checkbox"  value="1" />
+                                <div id="bfDiv" class="orderSwitch switch-small">
+                                    <input id="breakfast" name="breakfast"  type="checkbox"  value="1" />
+                                </div>
                             </div>
                             <label class="col-md-1">份数</label>
                             <div class="col-md-5">
@@ -160,9 +163,11 @@
                             </div>
                         </div>
                         <div class="form-group disabled col-md-12">
-                            <label class="col-md-2">午餐</label>
+                            <label class="col-md-2 ">午餐</label>
                             <div class="col-md-4">
-                                <input id="lunch" name="lunch" class="orderSwitch switch-small" type="checkbox" value="1"/>
+                                <div id="lDiv" class="orderSwitch switch-small">
+                                    <input id="lunch" name="lunch" type="checkbox" value="1"/>
+                                </div>
                             </div>
                             <label class="col-md-1">份数</label>
                             <div class="col-md-5">
@@ -172,7 +177,9 @@
                         <div class="form-group disabled col-md-12">
                             <label class="col-md-2">晚餐</label>
                             <div class="col-md-4">
-                                <input id="dinner" name="dinner" class="orderSwitch" type="checkbox" value="1"/>
+                                <div id="dDiv" class="orderSwitch switch-small">
+                                    <input id="dinner" name="dinner" type="checkbox" value="1"/>
+                                </div>
                             </div>
                             <label class="col-md-1">份数</label>
                             <div class="col-md-5">
@@ -207,7 +214,8 @@
 </body>
 <script>
     var uid = $('#uid').val();
-    var delete_COID = {};
+    var EDIT_COID = 0;
+    var EDIT_OTIME= '';
 
     $('#table').bootstrapTable({
         url: '/canteen/getUserOrders.do',         //请求后台的URL（*）
@@ -266,9 +274,8 @@
                 title: '早餐',
                 formatter:function (value,row,index) {
                     if (row.breakfast === 0){
-                        return value = '<span> 未订 </span>'
+                        return value = '<span style="color: red"> 未订 </span>'
                     }else {
-                        $('#breakfast').prop('checked','checked');
                         return value = '<span> 已定 </span>'
                     }
                 }
@@ -280,9 +287,8 @@
                 title: '午餐',
                 formatter:function (value,row,index) {
                     if (row.lunch === 0){
-                        return value = '<span> 未订 </span>'
+                        return value = '<span style="color: red"> 未订 </span>'
                     }else {
-                        $('#lunch').prop('checked','checked');
                         return value = '<span> 已定 </span>'
                     }
                 }
@@ -294,7 +300,7 @@
                 title: '晚餐',
                 formatter:function (value,row,index) {
                     if (row.dinner === 0){
-                        return value = '<span> 未订 </span>'
+                        return value = '<span style="color: red"> 未订 </span>'
                     }else {
                         $('#dinner').prop('checked','checked');
                         return value = '<span> 已定 </span>'
@@ -357,15 +363,67 @@
         $('#edit').on('show.bs.modal',function (event) {
             var button = $(event.relatedTarget) ;
             var recipient = button.data('whatever');
-
+            EDIT_COID =recipient;
             var modal = $(this);
-            modal.find('.modal-title').text('订餐编号 COID： ' + recipient)
+            modal.find('.modal-title').text('订餐编号 COID： ' + recipient);
+        });
+
+        $('.orderSwitch').on('click',function (event) {
+            $('.orderSwitch').bootstrapSwitch('toggleState');
+        })
+
+        $('#table').on('click-row.bs.table',function (field ,row) {
+            EDIT_OTIME = row.oTime;
+            $('#bfDiv').bootstrapSwitch('toggleState');
+            $('#lDiv').bootstrapSwitch('toggleState');
+            $('#dDiv').bootstrapSwitch('toggleState');
+            if (row.breakfast > 0){
+                $('#bfDiv').bootstrapSwitch('setState',true);
+            }
+            if (row.lunch > 0){
+                $('#lDiv').bootstrapSwitch('setState',true);
+            }
+            if (row.dinner > 0){
+                $('#dDiv').bootstrapSwitch('setState',true);
+            }
         })
     });
 
     function editOrder() {
+        var editForm = $('#editForm').serializeArray();
+        var data = convertToJson(editForm);
+        var json = JSON.stringify(data);
 
+        $.ajax({
+            url: '/canteen/editOrder.do',
+            type: 'POST',
+            dataType: 'JSON',
+            contentType: "application/json;charset=utf-8",
+            data: json,
+            success: function (data) {
+                var fail = data.fail;
+                if (data.statusCode == 200) {
+                    $('#edit').modal('hide');
+                    var info = '';
+                    info = '<div class="alert alert-success " role="alert">' +
+                        ' <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
+                        '' + data.msg + '</div>';
+
+                    $('#msgDiv').append(info);
+                    $('#table').bootstrapTable('refresh');
+                    $('.orderSwitch').bootstrapSwitch('setState',false);
+                } else {
+                    $('#edit').modal('hide');
+                    var info = '<div class="alert alert-danger " role="alert">' +
+                        ' <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
+                        '' + data.msg + '</div>';
+                    $('#msgDiv').append(info);
+                    $('.orderSwitch').bootstrapSwitch('setState',false);
+                }
+            }
+        })
     }
+
 
     function deleteOrder() {
         var rows = $('#table').bootstrapTable('getSelections');
@@ -405,7 +463,7 @@
     }
 
     function convertToJson(str) {
-        var obj ={"uid":$('#editUid').val(),"name":$('#username').val()};
+        var obj ={"uid":$('#editUid').val()+'',"coid":EDIT_COID,"otime":EDIT_OTIME};
         for (var i in str){
             obj[str[i].name]=str[i]['value'];
         }
